Changed display names and descriptions

--- a/configs/Alia.cfg
+++ b/configs/Alia.cfg
@@ -13,8 +13,8 @@
         }
         Properties
         {
-            displayName = Alia^N
-            description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
+            displayName = #LOC_CH_Alia_displayName
+            description = #LOC_CH_Alia_description
             radius = 340000
             geeASL = 0.6
             rotates = True
