--- a/configs/Beekos.cfg
+++ b/configs/Beekos.cfg
@@ -11,8 +11,8 @@
         }
         Properties
         {
-            displayName = Beekos
-            description = Being the second innermost moon of Magnifica makes it a little bit more difficult to reach, its stretched out shape is most likely due to its rotation speed and collecting material from Magnificas rings.
+            displayName = #LOC_CH_Beekos_displayName
+            description = #LOC_CH_Beekos_description
             radius = 35000
             geeASL = 0.075
             rotates = True
