--- a/configs/Booopus.cfg
+++ b/configs/Booopus.cfg
@@ -12,9 +12,9 @@
         }
         Properties
         {
-            displayName = Booopus^N
-            description = The discovery of Booopus caused a wave of melancholy in the Kerbal society, its appearance ressembles the Mun, the former moon of the original home of the kerbals, they miss their home.
-            radius = 250000
+            displayName = #LOC_CH_Booopus_displayName
+            description = #LOC_CH_Booopus_description
+			radius = 250000
             geeASL = 0.195
             rotates = True
             rotationPeriod = 5000
