--- a/configs/Cili.cfg
+++ b/configs/Cili.cfg
@@ -11,8 +11,8 @@
         }
         Properties
         {
-            displayName = Cili
-            description = Cili is an asteroid captured by Sanctar-Alia, its size is very concerning as it could easily make one of the two worlds unhabitable if perturbed, keeping an eye on it is the best thing to do.
+            displayName = #LOC_CH_Cili_displayName
+            description = #LOC_CH_Cili_description
             radius = 15000
             geeASL = 0.04
             rotates = True
