--- a/configs/Dasar.cfg
+++ b/configs/Dasar.cfg
@@ -11,9 +11,9 @@
         }
         Properties
         {
-            displayName = Dasar
-            description = Dasar is the closet planet to Harmonia, so close that some pools of lava has formed, creatin sharp edges and flat plains. The lack of craters shows an extremely young surface. It has orgininally been confused by a very dim brown dwarf due to emmiting a considerable amount of light.
-            radius = 200000
+            displayName = #LOC_CH_Dasar_displayName
+            description = #LOC_CH_Dasar_description
+			radius = 200000
             geeASL = 0.2
             rotates = True
             rotationPeriod = 72000
