--- a/configs/Eespeyeria.cfg
+++ b/configs/Eespeyeria.cfg
@@ -13,8 +13,8 @@
         }
         Properties
         {
-            displayName = Eespeyeria^N
-            description = Eespeyeria has a very dense atmopshere for a moon of this mass. Readings show a very eroded landscape with lakes of hydrocarbons.
+            displayName = #LOC_CH_Eespeyeria_displayName
+            description = #LOC_CH_Eespeyeria_description
             radius = 150000
             geeASL = 0.4
             rotates = True
