--- a/configs/Gaia.cfg
+++ b/configs/Gaia.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Gaia
-            description = Being the outermost body in the Harmonia system, Gaia is famous for its unique properties, a dense enough atomsphere for aerobreaking, an icy composition (perfect for ice cream) and a ressourceful companion, Po.
+            displayName = #LOC_CH_Gaia_displayName
+            description = #LOC_CH_Gaia_description
             radius = 300000
             geeASL = 0.3
             rotates = True
