--- a/configs/Harmonia.cfg
+++ b/configs/Harmonia.cfg
@@ -15,8 +15,8 @@
             radius = 56920916.16
             mass = 1.2295821E+28
             useTheInName = false
-            displayName = Harmonia
-            description = Harmonia is the center of this star system.
+            displayName = #LOC_CH_Harmonia_displayName
+            description = #LOC_CH_Harmonia_description
         }
         ScaledVersion
         {
