--- a/configs/Kreak.cfg
+++ b/configs/Kreak.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Kreak^N
-            description = Kreak is an icy moon, so icy that most of its surface is covered in ice, except for some mountains raising above the ice levels. Probably also tastes delicious.
+            displayName = #LOC_CH_Kreak_displayName
+            description = #LOC_CH_Kreak_discription
             radius = 350000
             geeASL = 0.3
             rotates = True
