--- a/configs/Krob.cfg
+++ b/configs/Krob.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Krob^N
-            description = Only true moon of the Sanctar-Alia system, the coloration was originally thought to be ice cream, unfortunately its close proximity to Harmonia makes it impossible.
+            displayName = #LOC_CH_Krob_displayName
+            description = #LOC_CH_Krob_description
             radius = 150000
             geeASL = 0.1
             rotates = True
