--- a/configs/Magnifica.cfg
+++ b/configs/Magnifica.cfg
@@ -10,8 +10,8 @@
         }
         Properties
         {
-            displayName = Magnifica
-            description = The sole gas giant in the Harmonia system, it was named Magnifica due to the discoverer being completely baffled by the grape candy in the sky.
+            displayName = #LOC_CH_Magnifica_displayName
+            description = #LOC_CH_Magnifica_description
             radius = 5460230
             geeASL = 1.5
             rotates = True
