--- a/configs/Majesty.cfg
+++ b/configs/Majesty.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Majesty^N
-            description = Majesty is the only moon of Aklarka. The nature of its parent planet makes Majesty a nice pit stop for whoever tries to go and return from Aklarkas surface. Majesty agglomerate some material in the rings, creating a gap. Jumping from the giant cliff looks very fun !
+            displayName = #LOC_CH_Majesty_displayName
+            description = #LOC_CH_Majesty_description
             radius = 125000
             geeASL = 0.2
             rotates = True
