--- a/configs/Po.cfg
+++ b/configs/Po.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Po^N
-            description = Po is the sole companion of Gaia, together alone at the edge of the system. This time it actually might have ice cream on it!
+            displayName = #LOC_CH_Po_displayName
+            description = #LOC_CH_Po_displayName
             radius = 100000
             geeASL = 0.07
             rotates = True
