--- a/configs/Pobos.cfg
+++ b/configs/Pobos.cfg
@@ -11,8 +11,8 @@
         }
         Properties
         {
-            displayName = Pobos
-            description = Pobos is the innermost moon of Magnifica, it is very small and theorized to be a clump of ring material or being the remnant of an old broken moon that made the rings. Some says that it ressembles a primate skull.
+            displayName = #LOC_CH_Pobos_displayName
+            description = #LOC_CH_Pobos_description
             radius = 2500
             geeASL = 0.002
             rotates = True
