--- a/configs/Sanctar.cfg
+++ b/configs/Sanctar.cfg
@@ -13,8 +13,8 @@
         }
         Properties
         {
-            displayName = Sanctar^N
-            description = Sanctar is a very welcoming world, falling upon it is extremely luck as it is apart of a binary system. Its sister, Alia, has very similar properties. Those qualities made Sanctar the number one candidate for kerbal immigration after they lost their home due to unfortunate events.
+            displayName = #LOC_CH_Sanctar_displayName
+            description = #LOC_CH_Sanctar_description
             radius = 670000
             geeASL = 1.1
             rotates = True
