--- a/configs/Trom.cfg
+++ b/configs/Trom.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Trom
-            description = Trom is an egg shaped ringed dwarf planet, its original discovery made the scientists quite hungry for an omelette. Some believe it to be a Kraken egg. Kraken egg or not, Trom is an interesting destination.
+            displayName = #LOC_CH_Trom_displayName
+            description = #LOC_CH_Trom_description
             radius = 85000
             geeASL = 0.1
             rotates = True
