--- a/configs/Valheilheim.cfg
+++ b/configs/Valheilheim.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Valheilheim
-            description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. No spice has been found, *yet*
+            displayName = #LOC_CH_Vallheilheim_displayName
+            description = #LOC_CH_Vallheilheim_description
             radius = 450000
             geeASL = 0.8
             rotates = True
