I forgot Aklarka last time lol

--- a/configs/Aklarka.cfg
+++ b/configs/Aklarka.cfg
@@ -12,8 +12,8 @@
         }
         Properties
         {
-            displayName = Aklarka
-            description = Aklarka is between a rocky planet and a gas planet, covered in water and a dense hydrogen based atmosphere, it is believed to be the first identified Hycean planet. Its original discoverer thought it was a fly on the lens.
+            displayName = #LOC_CH_Aklarka_displayName
+            description = #LOC_CH_Aklarka_displayName
             radius = 2000000
             geeASL = 0.8
             rotates = True
