Fixed some bugz

--- a/configs/Po.cfg
+++ b/configs/Po.cfg
@@ -13,7 +13,7 @@
         Properties
         {
             displayName = #LOC_CH_Po_displayName
-            description = #LOC_CH_Po_displayName
+            description = #LOC_CH_Po_description
             radius = 100000
             geeASL = 0.07
             rotates = True
