Added names and descriptions

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -1,11 +1,101 @@
+// THIS FILE CONTAINS SPOILERS!!!
+// This file has science defines, which are more fun to read in KSP then in here
+
+// Localization written by DIY Labs
+
 Localization
 {
 
 	en-us
 	{
-
-		#LOC_CH_ScienceDefs_MysteryGoo_Krob_InSpaceLow = The goo seems to show some signs of life here. Maybe it detects something?
+	
+	// Defs for Aklarka:
+	#LOC_CH_Aklarka_displayName = Aklarka^N
+	#LOC_CH_Aklarka_description = Aklarka is between a rocky planet and a gas planet, covered in water and a dense hydrogen based atmosphere, it is believed to be the first identified Hycean planet. Its original discoverer thought it was a fly on the lens.
 		
+
+	// Defs for Alia:
+	#LOC_CH_Alia_displayName = Alia^N
+	#LOC_CH_Alia_description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
+
+
+	// Defs for Beekos:
+	#LOC_CH_Beekos_displayName = Beekos^N
+	#LOC_CH_Beekos_description = Being the second innermost moon of Magnifica makes it a little bit more difficult to reach, its stretched out shape is most likely due to its rotation speed and collecting material from Magnificas rings.
+		
+
+	// Defs for Booopus:
+	#LOC_CH_Booopus_displayName = Booopus^N
+	#LOC_CH_Booopus_description = The discovery of Booopus caused a wave of melancholy in the Kerbal society, its appearance ressembles the Mun, the former moon of the original home of the kerbals, they miss their home.
+		
+
+	// Defs for Cili:
+	#LOC_CH_Cili_displayName = Cili^N
+	#LOC_CH_Cili_description = Cili is an asteroid captured by Sanctar-Alia, its size is very concerning as it could easily make one of the two worlds unhabitable if perturbed, keeping an eye on it is the best thing to do.
+		
+
+	// Defs for Dasar:
+	#LOC_CH_Dasar_displayName = Dasar^N
+	#LOC_CH_Dasar_description = Dasar is the closet planet to Harmonia, so close that some pools of lava has formed, creating sharp edges and flat plains. The lack of craters shows an extremely young surface. It has orgininally been confused by a very dim brown dwarf due to emmiting a considerable amount of light.
+
+		
+	// Defs for Eespeyeria:
+	#LOC_CH_Eespeyeria_displayName = Eespeyeria^N
+	#LOC_CH_Eespeyeria_description = Eespeyeria has a very dense atmopshere for a moon of this mass. Readings show a very eroded landscape with lakes of hydrocarbons.
+
+		
+	// Defs for Gaia:
+	#LOC_CH_Gaia_displayName = Gaia^N
+	#LOC_CH_Gaia_description = Being the outermost body in the Harmonia system, Gaia is famous for its unique properties, a dense enough atomsphere for aerobreaking, an icy composition (perfect for ice cream) and a ressourceful companion, Po.
+
+		
+	// Defs for Harmonia:
+	#LOC_CH_Harmonia_displayName = Harmonia^N
+	#LOC_CH_Harmonia_description = Harmonia is the center of this star system.
+
+		
+	// Defs for Kreak:
+	#LOC_CH_Kreak_displayName = Kreak^N
+	#LOC_CH_Kreak_description = Kreak is an icy moon, so icy that most of its surface is covered in ice, except for some mountains raising above the ice levels. Probably also tastes delicious.
+
+		
+	// Defs for Krob:
+	#LOC_CH_Krob_displayName = Krob^N
+	#LOC_CH_Krob_description = Only true moon of the Sanctar-Alia system, the coloration was originally thought to be ice cream, unfortunately its close proximity to Harmonia makes it impossible.
+
+		
+	// Defs for Magnifica:
+	#LOC_CH_Magnifica_displayName = Magnifica^N
+	#LOC_CH_Magnifica_description = The sole gas giant in the Harmonia system, it was named Magnifica due to the discoverer being completely baffled by the grape candy in the sky.
+
+		
+	// Defs for Majesty:
+	#LOC_CH_Majesty_displayName = Majesty^N
+	#LOC_CH_Majesty_description = Majesty is the only moon of Aklarka. The nature of its parent planet makes Majesty a nice pit stop for whoever tries to go and return from Aklarkas surface. Majesty agglomerate some material in the rings, creating a gap. Jumping from the giant cliff looks very fun !
+
+		
+	// Defs for Po:
+	#LOC_CH_Po_displayName = Po^N
+	#LOC_CH_Po_description = Po is the sole companion of Gaia, together alone at the edge of the system. This time it actually might have ice cream on it!
+
+		
+	// Defs for Pobos:
+	#LOC_CH_Pobos_displayName = Pobos^N
+	#LOC_CH_Pobos_description = Pobos is the innermost moon of Magnifica, it is very small and theorized to be a clump of ring material or being the remnant of an old broken moon that made the rings. Some says that it ressembles a primate skull.
+		
+	// Defs for Sanctar
+	#LOC_CH_Sanctar_displayName = Sanctar^N
+	#LOC_CH_Sanctar_description = Sanctar is a very welcoming world, falling upon it is extremely luck as it is apart of a binary system. Its sister, Alia, has very similar properties. Those qualities made Sanctar the number one candidate for kerbal immigration after they lost their home due to unfortunate events.
+
+		
+	// Defs for Trom
+	#LOC_CH_Trom_displayName = Trom^N
+	#LOC_CH_Trom_description = Trom is an egg shaped ringed dwarf planet, its original discovery made the scientists quite hungry for an omelette. Some believe it to be a Kraken egg. Kraken egg or not, Trom is an interesting destination.
+
+	// Defs for Vallheilheim
+	#LOC_CH_Vallheilheim_displayName = Vallheilheim^N
+	#LOC_CH_Vallheilheim_description = Valheilheim is the desert planet of the Harmonia system. This planet has very small rings and a huge plain, most probably due to a *recent* cataclysmic event, such as a collision. This place would be great to shoot some movies !
+
 	}
 
 }
