Added crew reports for Aklara

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -1,7 +1,22 @@
 @EXPERIMENT_DEFINITION:HAS[#id[crewReport]]:FOR[CelestialHarmony]
 {
-	ValheilheimInSpaceLow = A dusty boi indeed!
+	@RESULTS
+	{
 
+	
+	// Crew reports for Alarka: 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded2
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed1
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed2
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow1
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow2
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh1
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh2
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow1
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow2
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2
 
-
+	}
 }
