Added crew reports for Aklara

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -12,7 +12,19 @@ Localization
 	// Defs for Aklarka:
 	#LOC_CH_Aklarka_displayName = Aklarka^N
 	#LOC_CH_Aklarka_description = Aklarka is between a rocky planet and a gas planet, covered in water and a dense hydrogen based atmosphere, it is believed to be the first identified Hycean planet. Its original discoverer thought it was a fly on the lens.
-		
+
+	#LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 = How did we get here? // Doesn't have a surface so this is illegal
+	#LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded2 = Proxima won't be too happy about this!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed1 = Being a Hycean planet, Aklarka sure has some waves! I hope we don't tip over!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed2 = The water seems to be getting inside every open hole. The engines and RCS are reporting being "thoroughly flooded".
+	#LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow1 = Flying low over Aklarka sure is a spectacle! The engines don't seem too happy about the hydrogen though.
+	#LOC_CH_Aklarka_ScienceDef_crewReport_flyingLow2 = From this low altitude, we can see the ocean clearly. We may have to circle down over the beacon!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh1 = At this height, we can run experiments on Aklarka's upper atmosphere. Seems to be hydrogen all the way down!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_flyingHigh2 = From up here we can marvel at the planet-wide ocean. This is the first Hycean planet found by kerbals, so the scientists back home are very excited!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow1 = Alarka takes up most of the window. Surface scans indicate waves the size of mountains. Probably a bug.
+	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow2 = The planet looming up is nothing but water. And hydrogen, according to our instruments. We'll have to dip in to make sure!
+	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1 = From here, Aklarka almost looks like Kerbin, but doesn't have any land. The crew are getting nostalgic.
+	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2 = After months of travel, we are greeted by our next stop: Aklarka. This appears to be a Hycean planet, however we need to get more information to be sure.
 
 	// Defs for Alia:
 	#LOC_CH_Alia_displayName = Alia^N
