Added Aklarka EVA Reports

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -2,7 +2,6 @@
 {
 	@RESULTS
 	{
-
 	
 	// Crew reports for Alarka: 
 	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 
@@ -17,6 +16,28 @@
 	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceLow2
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2
+
+	}
+}
+
+@EXPERIMENT_DEFINITION:HAS[#id[evaReport]]:FOR[CelestialHarmony]
+{
+	@RESULTS
+	{
+	
+	// EVA reports for Alarka: 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded1 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded2
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed1
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed2
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow1
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow2
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh1
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh2
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow1
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow2
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2
 
 	}
 }
