Added EVA reports for Aklarka

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -26,6 +26,19 @@ Localization
 	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1 = From here, Aklarka almost looks like Kerbin, but doesn't have any land. The crew are getting nostalgic.
 	#LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2 = After months of travel, we are greeted by our next stop: Aklarka. This appears to be a Hycean planet, however we need to get more information to be sure.
 
+	#LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded1 = Not even Jeb has this level of badassery! // Doesn't have a surface so this is illegal
+	#LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded2 = So this is where baby krakens are born!
+	#LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed1 = After clambering out of the hatch, we can see that the waves are indeed the size of mountains.
+	#LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed2 = GET YOUR ASS BACK INTO THE SHIP NOW!
+	#LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow1 = The EVA suit is loudly complaining about a "Dangerous Atmosphere". I wonder why?
+	#LOC_CH_Aklarka_ScienceDef_evaReport_flyingLow2 = From outside, we can marvel at the ocean stretching out below. The shimmering blue stuns you.
+	#LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh1 = At this altitude, we really hope that the atmosphere is dense enough to parachute safely
+	#LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh2 = The mission planners back at the KSC have marked this maneuver as "Highly dangerous and must not be attemped".
+	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow1 = Getting out here really shows how massive Aklarka truly is, on a kerbal scale. Your entire field-of-view is flled by a lovely shimmering blue.
+	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow2 = Mission planners thought that their equipment was malfunctioning, but it really is a planet full of water!
+	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1 = After entering Aklarka's SOI, we can get a closer view at the lovely Hycean world stretching out below..
+	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2 = After losing Kerbin, Aklara reminds the crew of their beautiful blue marble.
+
 	// Defs for Alia:
 	#LOC_CH_Alia_displayName = Alia^N
 	#LOC_CH_Alia_description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
