--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -36,7 +36,7 @@ Localization
 	#LOC_CH_Aklarka_ScienceDef_evaReport_flyingHigh2 = The mission planners back at the KSC have marked this maneuver as "Highly dangerous and must not be attemped".
 	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow1 = Getting out here really shows how massive Aklarka truly is, on a kerbal scale. Your entire field-of-view is flled by a lovely shimmering blue.
 	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow2 = Mission planners thought that their equipment was malfunctioning, but it really is a planet full of water!
-	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1 = After entering Aklarka's SOI, we can get a closer view at the lovely Hycean world stretching out below..
+	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1 = After entering Aklarka's SOI, we can get a closer view at the lovely Hycean world stretching out below.
 	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2 = After losing Kerbin, Aklara reminds the crew of their beautiful blue marble.
 
 	// Defs for Alia:
