Added mystery goo for Aklarka

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -3,7 +3,7 @@
 	@RESULTS
 	{
 	
-	// Crew reports for Alarka: 
+	// Crew reports for Aklarka: 
 	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded1 
 	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_crewReport_srfLanded2
 	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_crewReport_srfSplashed1
@@ -25,7 +25,7 @@
 	@RESULTS
 	{
 	
-	// EVA reports for Alarka: 
+	// EVA reports for Aklarka: 
 	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded1 
 	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_evaReport_srfLanded2
 	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_evaReport_srfSplashed1
@@ -38,6 +38,28 @@
 	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceLow2
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2
+
+	}
+}
+
+@EXPERIMENT_DEFINITION:HAS[#id[mysteryGoo]]:FOR[CelestialHarmony]
+{
+	@RESULTS
+	{
+	
+	// Mystery goo for Aklarka: 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded1 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded2
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed1
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed2
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow1
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow2
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh1
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh2
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow1
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow2
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh1
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh2
 
 	}
 }
