Added mystery goo for Aklarka

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -39,6 +39,19 @@ Localization
 	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh1 = After entering Aklarka's SOI, we can get a closer view at the lovely Hycean world stretching out below.
 	#LOC_CH_Aklarka_ScienceDef_evaReport_inSpaceHigh2 = After losing Kerbin, Aklara reminds the crew of their beautiful blue marble.
 
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded1 = The goo seems to know that this state is illegal // Doesn't have a surface so this is illegal
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfLanded2 = How did you manage this anyway?
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed1 = The goo seems to enjoy the warm, peaceful ocean.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_srfSplashed2 = This is the first time that kerbals have seen the goo this excited!
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow1 = When flying, the goo seems to retract back into its casing.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingLow2 = It appears that the goo does not like flying in Aklarka's atmosphere
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh1 = The goo does not like this one bit. Maybe the hydrogen and lack of a stable surface disturbs it?
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_flyingHigh2 = Attempts to observe the goo have failed. The goo is really angry here.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow1 = The goo is its familiar self here. It appears that a new planet does not disturb it.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow2 = The goo appears to be curious, looking at the beautiful blue surface below with awe.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh1 = The goo seemed to be in some sort of hibernation, but awoke once it detected Aklarka.
+	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh2 = The goo canister is warm to the touch, compared to the cold metal exterior of the spacecraft. Maybe the goo is happy?
+
 	// Defs for Alia:
 	#LOC_CH_Alia_displayName = Alia^N
 	#LOC_CH_Alia_description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
