Added temp for Aklarka

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -63,3 +63,25 @@
 
 	}
 }
+
+@EXPERIMENT_DEFINITION:HAS[#id[temperatureScan]]:FOR[CelestialHarmony]
+{
+	@RESULTS
+	{
+	
+	// Temperature for Aklarka: 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_temperature_srfLanded1 
+	AklarkaSrfLanded = #LOC_CH_Aklarka_ScienceDef_temperature_srfLanded2
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed1
+	AklarkaSrfSplashed = #LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed2
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_temperature_flyingLow1
+	AklarkaFlyingLow = #LOC_CH_Aklarka_ScienceDef_temperatureo_flyingLow2
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh1
+	AklarkaFlyingHigh = #LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh2
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow1
+	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow2
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh1
+	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh2
+
+	}
+}
