Added temp for Aklarka

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -52,6 +52,19 @@ Localization
 	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh1 = The goo seemed to be in some sort of hibernation, but awoke once it detected Aklarka.
 	#LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh2 = The goo canister is warm to the touch, compared to the cold metal exterior of the spacecraft. Maybe the goo is happy?
 
+	#LOC_CH_Aklarka_ScienceDef_temperature_srfLanded1 = Temperature indicates negative kelvin. This indicates that this is not a supported situation
+	#LOC_CH_Aklarka_ScienceDef_temperature_srfLanded2 = Achievement Unlocked! Breaking The Game!
+	#LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed1 = Temperature indications say that it is slightly warmer than Kerbin was. Signs of life maybe!
+	#LOC_CH_Aklarka_ScienceDef_temperature_srfSplashed2 = Huh, the temperature probe indicates that Aklarka's ocean is slightly warmer than Kerbin was. We need more data under the ocean though.
+	#LOC_CH_Aklarka_ScienceDef_temperature_flyingLow1 = The temperature probe seems to be indicating cold temperatures, but that might just be the wind.
+	#LOC_CH_Aklarka_ScienceDef_temperature_flyingLow2 = The probe indicates a very warm, habitable temperature.
+	#LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh1 = The readings seem to jerk about a lot, might be some upper-level winds.
+	#LOC_CH_Aklarka_ScienceDef_temperature_flyingHigh2 = The temperature probe is responding exactly as the engineers back home expected.
+	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow1 = Temperatures seem to be normal for a low orbit around a planet!
+	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow2 = The probe seemed to be indicating a sudden heat. Got us confused before we realised it was Jeb running the snack heater too much.
+	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh1 = Measuring the temperature in space is challenging, due to not many particles coming in. We assume that it is cold.
+	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh2 = The temperature probe *says* zero kelvin, we are not sure though
+
 	// Defs for Alia:
 	#LOC_CH_Alia_displayName = Alia^N
 	#LOC_CH_Alia_description = Alia, the secondary binary planet of the Sanctar-Alia system. A very bumpy yet beautiful crater covered world, perfect for a colonial expansion as it is almost as habitable as Sanctar.
