Added surface samples for Aklarka

--- a/configs/Localization/en-us.cfg
+++ b/configs/Localization/en-us.cfg
@@ -63,7 +63,20 @@ Localization
 	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow1 = Temperatures seem to be normal for a low orbit around a planet!
 	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceLow2 = The probe seemed to be indicating a sudden heat. Got us confused before we realised it was Jeb running the snack heater too much.
 	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh1 = Measuring the temperature in space is challenging, due to not many particles coming in. We assume that it is cold.
-	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh2 = The temperature probe *says* zero kelvin, we are not sure though
+	#LOC_CH_Aklarka_ScienceDef_temperature_inSpaceHigh2 = The temperature probe *says* zero kelvin, we are not sure though.
+
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_srfLanded1 = Sample indicates illegallity!
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_srfLanded2 = Crew onboard are very confused about this sample!
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_srfSplashed1 = Ocean sample gatheres seems to indicate a similar water to Kerbin and Laythe. More signs of life?
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_srfSplashed2 = The crew are really excited about this sample! It indicates similarity to samples from Kerbin and Laythe, which suggests that Aklarka *might* be another habitable home
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingLow1 = It's called a "surface sample" for a reason
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingLow2 = What are you even expecting from this sample?
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingHigh1 = I told you to not read this file, its way more fun to find these out in-game
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_flyingHigh2 = WHAT ARE YOU DOING HERE???
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceLow1 = Join the Discord: https://discord.gg/rGF5Ge9y7f
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceLow2 = What samples did you collect from up here?
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceHigh1 = It's chilly out here. Why did you send me on this pointless endeavour?
+	#LOC_CH_Aklarka_ScienceDef_surfaceSample_inSpaceHigh2 = We probably should get this sample from that blue ball down there...
 
 	// Defs for Alia:
 	#LOC_CH_Alia_displayName = Alia^N
