--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -17,6 +17,28 @@
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh1
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_crewReport_inSpaceHigh2
 
+	// Crew reports for Dasar: 
+	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore1
+	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_HotShore2
+	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands1
+	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Lowlands2
+	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains1
+	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Flatplains2
+	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands1
+	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands2
+	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1
+	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2
+	DasarFlyingLow = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow1
+	DasarFlyingLow = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow2
+	DasarFlyingLowLavalakes = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow_LavaLakes1
+	DasarFlyingLowLavalakes = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow2_LavaLakes2
+	DasarFlyingHigh = #LOC_CH_Dasar_ScienceDef_crewReport_flyingHigh1
+	DasarFlyingHigh = #LOC_CH_Dasar_ScienceDef_crewReport_flyingHigh2
+	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1
+	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2
+	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh1
+	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh2
+
 	}
 }
 
