Added Dasar mystery goo reports

--- a/configs/ScienceDefs.cfg
+++ b/configs/ScienceDefs.cfg
@@ -28,12 +28,6 @@
 	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_crewReport_srfLanded_Midlands2
 	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed1
 	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_crewReport_srfSplashed2
-	DasarFlyingLow = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow1
-	DasarFlyingLow = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow2
-	DasarFlyingLowLavalakes = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow_LavaLakes1
-	DasarFlyingLowLavalakes = #LOC_CH_Dasar_ScienceDef_crewReport_flyingLow2_LavaLakes2
-	DasarFlyingHigh = #LOC_CH_Dasar_ScienceDef_crewReport_flyingHigh1
-	DasarFlyingHigh = #LOC_CH_Dasar_ScienceDef_crewReport_flyingHigh2
 	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow1
 	DasarInSpaceLow = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceLow2
 	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_crewReport_inSpaceHigh1
@@ -82,6 +76,30 @@
 	AklarkaInSpaceLow = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceLow2
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh1
 	AklarkaInSpaceHigh = #LOC_CH_Aklarka_ScienceDef_mysteryGoo_inSpaceHigh2
+
+	// Mystery goo for Dasar
+	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore1
+	DasarSrfLandedHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_HotShore2
+	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands1
+	DasarSrfLandedLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Lowlands2
+	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains1
+	DasarSrfLandedFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Flatplains2
+	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands1
+	DasarSrfLandedMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfLanded_Midlands2
+	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed1
+	DasarSrfSplashed = #LOC_CH_Dasar_ScienceDef_mysteryGoo_srfSplashed2
+	DasarInSpaceLowLavalakes = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes1
+	DasarInSpaceLowLavalakes = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_LavaLakes2
+	DasarInSpaceLowHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore1
+	DasarInSpaceLowHotshores = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_HotShore2
+	DasarInSpaceLowLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands1
+	DasarInSpaceLowLowlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Lowlands2
+	DasarInSpaceLowMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands1
+	DasarInSpaceLowMidlands = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_Midlands2
+	DasarInSpaceLowFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains1
+	DasarInSpaceLowFlatplains = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceLow_FlatPlains2
+	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh1
+	DasarInSpaceHigh = #LOC_CH_Dasar_ScienceDef_mysteryGoo_inSpaceHigh2
 
 	}
 }
